src/objects/npsp__Partial_Soft_Credit__c.object
<CustomObject>
    <fields>
        <fullName>npsp__Amount__c</fullName>
        <description>The amount to be soft credited.</description>
        <inlineHelpText>The amount to be soft credited.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Contact_Name__c</fullName>
        <description>The contact&apos;s full name.</description>
        <formula>HYPERLINK(&apos;/&apos; + npsp__Contact__c,npsp__Contact__r.FirstName + &apos; &apos; + npsp__Contact__r.LastName, &apos;_self&apos;)</formula>
        <inlineHelpText>The contact&apos;s full name.</inlineHelpText>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact_Role_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The OpportunityContactRole this soft credit applies to.</description>
        <inlineHelpText>The OpportunityContactRole this soft credit applies to.</inlineHelpText>
        <label>Contact Role ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>npsp__Contact__c</fullName>
        <description>The contact who gets this soft credit.</description>
        <inlineHelpText>The contact who gets this soft credit.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partial Soft Credits</relationshipLabel>
        <relationshipName>Partial_Soft_Credits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npsp__Opportunity__c</fullName>
        <description>The Opportunity this soft credit applies to.</description>
        <inlineHelpText>The Opportunity this soft credit applies to.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partial Soft Credits</relationshipLabel>
        <relationshipName>Partial_Soft_Credits</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npsp__Role_Name__c</fullName>
        <description>The Role of this soft credit.</description>
        <inlineHelpText>The Role of this soft credit.</inlineHelpText>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Partial Soft Credit</label>
    <nameField>
        <displayFormat>PSC-{0000}</displayFormat>
        <label>Partial Soft Credit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partial Soft Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>